@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-dh_installmanpages - old-style man page installer
+dh_installmanpages - old-style man page installer (deprecated)
 
 =cut
 
