@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-dh_python - calculates python dependencies and adds postinst and prerm python scripts
+dh_python - calculates python dependencies and adds postinst and prerm python scripts (deprecated)
 
 =cut
 
