@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-dh_suidregister - obsolete suid registration program
+dh_suidregister - suid registration program (deprecated)
 
 =head1 SYNOPSIS
 
@@ -12,8 +12,8 @@ Do not run!
 
 This program used to register suid and sgid files with L<suidregister(1)>,
 but with the introduction of L<dpkg-statoverride(8)>, registration of files
-in this way is unnecessary, and even harmful, so this program should not be
-used.
+in this way is unnecessary, and even harmful, so this program is deprecated
+and should not be used.
 
 =head1 CONVERTING TO STATOVERRIDE
 
