@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-dh_testversion - ensure that the correct version of debhelper is installed
+dh_testversion - ensure that the correct version of debhelper is installed (deprecated)
 
 =cut
 
