@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-dh_undocumented - obsolete undocumented.7 symlink program
+dh_undocumented - undocumented.7 symlink program (deprecated no-op)
 
 =cut
 
