@@ -22,7 +22,8 @@ Deprecated:
 * dh_suidregister. Once nothing in the archive uses it.
 * dh_installmanpages.
 * dh_testversion. Remove as soon as nothing uses it.
-* dh_movefiles. I won't hold my breath.
+* dh_movefiles. I won't hold my breath. Have not added deprecation
+  docs or message yet.
 * dh_undocumented
 * dh_installinit --init-script (make it warn)
 * dh_python
