@@ -14,6 +14,8 @@ debhelper (7.4.4) UNRELEASED; urgency=low
   * Add deprecation warnings for -u to the documentation, since putting
     options after -- is much more sane. (However, -u will not go away any
     time soon.) Closes: #554509
+  * Drop deprecated programs from the list of commands in debhelper(7).
+    Closes: #548382
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 Oct 2009 18:10:45 -0400
 
